# raze

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CODEGUIDE.md  CONTRIBUTING.md  README.md
public/: index.html  script.js  style.css
raze/: CMakeLists.txt  buffer.c  buffer.h  connection.c  connection.h  http_protocol.c  http_protocol.h  http_request.c  http_request.h  http_response.c  http_response.h  http_router.c  http_router.h  logger.c  logger.h  main.c  server.c  server.h  utility.c  utility.h
raze/core/: buffer.c  buffer.h  logger.c  logger.h  ring_buffer.c  ring_buffer.h  utility.c
raze/http/: http_parser.c  http_parser.h  http_protocol.c  http_request.c  http_request.h  http_response.c  http_response.h  http_router.c  http_router.h  http_utility.c  http_utility.h
raze/server/: connection.c  connection.h  server.c  server.h  static.c  static.h
scripts/: build-debug.bat  build-release.bat  gen-winprojects.bat  make-debug.bat  make-release.bat  run-debug.bat  run-release.bat
